spacing issue with footer image

--- a/index1.css
+++ b/index1.css
@@ -306,7 +306,7 @@ footer {
     .footer-col {
         padding: 20px;
     }
-    .footer-contact a {
+    .footer-contact img {
         display: inline-flex;
     }
 }
